--- a/javascripts/package.json
+++ b/javascripts/package.json
@@ -5,12 +5,11 @@
     "bootswatch": "^4.1.3",
     "chart.js": "^2.7.2",
     "gulp": "^3.9.1",
+    "gulp-google-webfonts": "^2.0.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "popper.js": "^1.14.4",
-    "typeface-roboto": "^0.0.54",
-    "typeface-roboto-mono": "^0.0.54",
     "urijs": "^1.19.1"
   }
 }
