--- a/envs/nginx.conf
+++ b/envs/nginx.conf
@@ -9,11 +9,11 @@ server {
     location / {
         auth_basic "Restricted";
         auth_basic_user_file /etc/nginx/.htpasswd;
-        try_files $uri @webapp;
+        try_files $uri @uwsgi;
     }
 
-    location @webapp {
+    location @uwsgi {
         include uwsgi_params;
-        uwsgi_pass unix:/var/www/web/uwsgi.sock;
+        uwsgi_pass unix:/opt/market-reporter/uwsgi.sock;
     }
 }
