--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -6,23 +6,21 @@ ENV PATH /opt/anaconda/bin:$PATH
 RUN apt-get update && apt-get -y install \
     git \
     nginx \
+    vim-tiny \
     wget
 
 # Anaconda
-RUN mkdir /opt && \
-    wget --quiet https://repo.anaconda.com/archive/Anaconda3-5.3.0-Linux-x86_64.sh -O /opt/anaconda.sh && \
+RUN mkdir -p /opt && \
+    wget --quiet https://repo.anaconda.com/archive/Anaconda3-5.3.0-Linux-x86_64.sh -O anaconda.sh && \
+    bash anaconda.sh -b -p /opt/anaconda && \
+    rm anaconda.sh && \
     groupadd anaconda && \
-    useradd --system --gid anaconda anaconda
-
-USER anaconda
-RUN bash anaconda.sh -b -p /opt/anaconda && \
-    rm /opt/anaconda.sh && \
+    useradd --system --gid anaconda anaconda && \
     chmod -R go-w /opt/anaconda && \
     chmod -R go+rX /opt/anaconda && \
-
-# Market Reporter
-USER root
-RUN groupadd plu && \
+    groupadd plu && \
     useradd --system --gid plu plu && \
     mkdir -p /opt/market-reporter && \
     chown -R plu:plu /opt/market-reporter
+
+COPY nginx.conf /etc/nginx/conf.d/market-reporter.conf
