--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,17 +1,10 @@
 [supervisord]
-nodaemon=true
-
-[progream:sshd]
-command=/usr/sbin/sshd -D
-priority=1
-autorestart=true
+user=root
+nodaemon=false
 
 [program:postgresql]
-command=/usr/lib/postgresql/9.6/bin/postgres -D /var/lib/postgresql/9.6/main -c config_file=/etc/postgresql/9.6/main/postgresql.conf
-user=plu
-autostart=true
-stdout_logfile=./supervisors-out.log
-stderr_logfile=./superviross-err.log
+user=postgres
+command=/usr/lib/postgresql/9.6/bin/postgres --config_file=/etc/postgresql/9.6/main/postgresql.conf
 
-#[program:nginx]
-#command=/usr/sbin/nginx -g "daemon off;"
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
