--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -15,20 +15,21 @@ RUN apt-get update && apt-get install -y \
     supervisor \
     vim-tiny
 
-RUN useradd --create-home --shell /bin/bash plu
+RUN useradd --create-home --shell /bin/bash reporter
+RUN mkdir -p /var/www/market-reporter \
+    && chown reporter:reporter -R market-reporter
 
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 ENTRYPOINT /usr/bin/supervisord --nodaemon --user root --configuration /etc/supervisor/supervisord.conf
 
 USER postgres
 RUN /etc/init.d/postgresql start \
-    && createuser plu \
-    && createdb master plu \
-    && createdb test_db plu \
+    && createuser reporter\
+    && createdb master reporter \
+    && createdb test_db reporter \
     && /etc/init.d/postgresql stop
 
-USER plu
-WORKDIR /home/plu/
-RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc \
+USER reporter
+RUN echo "source /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc \
     && echo "conda activate base" >> ~/.bashrc
-RUN git clone https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/aistairc/market-reporter.git
+RUN git clone https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/aistairc/market-reporter.git /var/www/market-reporter
