--- a/envs/nginx.conf
+++ b/envs/nginx.conf
@@ -14,6 +14,6 @@ server {
 
     location @webapp {
         include uwsgi_params;
-        uwsgi_pass unix:/var/www/web/uwsgi.sock;
+        uwsgi_pass unix:/var/www/market-reporter/uwsgi.sock;
     }
 }
