--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -1,7 +1,7 @@
 FROM continuumio/anaconda3
 
 ARG GITHUB_ACCESS_TOKEN
-ARG HTTP_PASSWARD
+ARG BASIC_AUTH_PASSWORD
 RUN test -n "$GITHUB_ACCESS_TOKEN" && test -n "$HTTP_PASSWARD"
 
 ENV DEBCONF_NOWARNINGS yes
