--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -2,7 +2,7 @@ FROM continuumio/anaconda3
 
 ARG GITHUB_ACCESS_TOKEN
 ARG BASIC_AUTH_PASSWORD
-RUN test -n "$GITHUB_ACCESS_TOKEN" && test -n "$HTTP_PASSWARD"
+RUN test -n "$GITHUB_ACCESS_TOKEN" && test -n "$BASIC_AUTH_PASSWORD"
 
 ENV DEBCONF_NOWARNINGS yes
 
