Use the public address of the repo

--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -1,9 +1,10 @@
 FROM continuumio/anaconda3
 
 ARG HOME_DIR="/opt/aistairc"
-ARG GITHUB_ACCESS_TOKEN
+# ARG GITHUB_ACCESS_TOKEN
+# RUN test -n "$GITHUB_ACCESS_TOKEN"
 ARG BASIC_AUTH_PASSWORD
-RUN test -n "$GITHUB_ACCESS_TOKEN" && test -n "$BASIC_AUTH_PASSWORD"
+RUN test -n "$BASIC_AUTH_PASSWORD"
 
 ENV DEBCONF_NOWARNINGS yes
 
@@ -32,7 +33,7 @@ RUN openssl genrsa 2048 > nginx-selfsigned.key \
     && openssl x509 -in nginx-selfsigned.csr -days 30 -req -signkey nginx-selfsigned.key > nginx-selfsigned.crt \
     && mv nginx-selfsigned.crt /etc/ssl/certs/nginx-selfsigned.crt \
     && mv nginx-selfsigned.key /etc/ssl/private/nginx-selfsigned.key \
-    && rm nginx-selfsigned.csr    
+    && rm nginx-selfsigned.csr
 
 RUN htpasswd -b -c /etc/nginx/.htpasswd reporter ${BASIC_AUTH_PASSWORD}
 
@@ -46,6 +47,10 @@ RUN /etc/init.d/postgresql start \
 USER reporter
 RUN echo "source /opt/conda/etc/profile.d/conda.sh" >> ${HOME_DIR}/.bashrc \
     && echo "conda activate base" >> ${HOME_DIR}/.bashrc
-RUN git clone https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/aistairc/market-reporter.git ${HOME_DIR}/market-reporter
+# if (the repository is private) {
+# RUN git clone https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/aistairc/market-reporter.git ${HOME_DIR}/market-reporter
+# } else {
+RUN git clone https://github.com/aistairc/market-reporter.git ${HOME_DIR}/market-reporter
+# }
 
 WORKDIR ${HOME_DIR}/market-reporter
