--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -1,10 +1,7 @@
 FROM continuumio/anaconda3
 
-ARG HOME_DIR="/opt/aistairc"
-# ARG GITHUB_ACCESS_TOKEN
-# RUN test -n "$GITHUB_ACCESS_TOKEN"
-ARG BASIC_AUTH_PASSWORD
-RUN test -n "$BASIC_AUTH_PASSWORD"
+ENV MARKET_REPORTER_HOME_DIR "/opt/aistairc"
+ENV MARKET_REPORTER_BASIC_AUTH_PASSWORD "market-reporter-basic-auth-password"
 
 ENV DEBCONF_NOWARNINGS yes
 
@@ -47,10 +44,6 @@ RUN /etc/init.d/postgresql start \
 USER reporter
 RUN echo "source /opt/conda/etc/profile.d/conda.sh" >> ${HOME_DIR}/.bashrc \
     && echo "conda activate base" >> ${HOME_DIR}/.bashrc
-# if (the repository is private) {
-# RUN git clone https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/aistairc/market-reporter.git ${HOME_DIR}/market-reporter
-# } else {
 RUN git clone https://github.com/aistairc/market-reporter.git ${HOME_DIR}/market-reporter
-# }
 
 WORKDIR ${HOME_DIR}/market-reporter
