--- a/environment.yaml
+++ b/environment.yaml
@@ -3,107 +3,30 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - icu=58.2=hfc679d8_0
-  - jansson=2.11=0
-  - libiconv=1.15=h470a237_2
-  - libxml2=2.9.8=h422b904_3
-  - pcre=8.41=h470a237_2
-  - uwsgi=2.0.17.1=py37h2184488_2
-  - asn1crypto=0.24.0=py37_0
-  - beautifulsoup4=4.6.3=py37_0
-  - blas=1.0=mkl
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.8.24=py37_1
-  - cffi=1.11.5=py37he75722e_1
-  - chardet=3.0.4=py37_1
-  - click=6.7=py37_0
-  - conda=4.5.11=py37_0
-  - conda-build=3.13.0=py37_0
-  - conda-env=2.6.0=1
-  - cryptography=2.3.1=py37hc365091_0
-  - cython=0.28.5=py37hf484d3e_0
-  - filelock=3.0.6=py37_0
-  - flask=1.0.2=py37_1
-  - freetype=2.9.1=h8a8886c_1
-  - glob2=0.6=py37_0
-  - idna=2.7=py37_0
-  - intel-openmp=2018.0.3=0
-  - isort=4.3.4=py37_0
-  - itsdangerous=0.24=py37_1
-  - jinja2=2.10=py37_0
-  - jpeg=9b=h024ee3a_2
-  - krb5=1.16.1=hc83ff2d_6
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.34=hb9fc6fc_0
-  - libpq=10.5=h1ad7b7a_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.9=he85c1e1_2
-  - markupsafe=1.0=py37h14c3975_1
-  - mkl=2018.0.3=1
-  - mkl_fft=1.0.4=py37h4414c95_1
-  - mkl_random=1.0.1=py37h4414c95_1
-  - ncurses=6.1=hf484d3e_0
-  - ninja=1.8.2=py37h6bb024c_1
-  - nltk=3.3.0=py37_0
-  - numpy=1.15.1=py37h1d66e8a_0
-  - numpy-base=1.15.1=py37h81de0dd_0
-  - olefile=0.45.1=py37_0
-  - openssl=1.0.2p=h14c3975_0
-  - pandas=0.23.4=py37h04863e7_0
-  - patchelf=0.9=hf484d3e_2
-  - pillow=5.2.0=py37heded4f4_0
-  - pip=10.0.1=py37_0
-  - pkginfo=1.4.2=py37_1
-  - psutil=5.4.7=py37h14c3975_0
-  - psycopg2=2.7.5=py37hb7f436b_0
-  - pycosat=0.6.3=py37h14c3975_0
-  - pycparser=2.18=py37_1
-  - pyopenssl=18.0.0=py37_0
-  - pysocks=1.6.8=py37_0
-  - python=3.7.0=hc3d631a_0
-  - python-dateutil=2.7.3=py37_0
-  - pytz=2018.5=py37_0
-  - pyyaml=3.13=py37h14c3975_0
-  - readline=7.0=h7b6447c_5
-  - requests=2.19.1=py37_0
-  - ruamel_yaml=0.15.46=py37h14c3975_0
-  - setuptools=40.2.0=py37_0
-  - six=1.11.0=py37_1
-  - sqlite=3.24.0=h84994c4_0
-  - tk=8.6.8=hbc83047_0
-  - urllib3=1.23=py37_0
-  - werkzeug=0.14.1=py37_0
-  - wheel=0.31.1=py37_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zlib=1.2.11=ha838bed_2
-  - pytorch=0.4.1=py37_py36_py35_py27__9.0.176_7.1.2_2
-  - torchvision=0.2.1=py37_1
+  - boto3
+  - botocore
+  - uwsgi
+  - beautifulsoup4
+  - flask
+  - nltk
+  - numpy
+  - pandas
+  - psycopg2
+  - pytz
+  - pyyaml=3.13
+  - urllib3
+  - pytorch=0.4.1
   - pip:
-    - ansible==2.6.3
-    - awscli==1.16.6
-    - bcrypt==3.1.4
-    - boto3==1.8.6
-    - botocore==1.11.6
-    - colorama==0.3.9
-    - docutils==0.14
-    - flask-sqlalchemy==2.3.2
-    - janome==0.3.6
-    - jmespath==0.9.3
-    - jsonlines==1.2.0
-    - mojimoji==0.0.8
-    - paramiko==2.4.1
-    - psycopg2-binary==2.7.5
-    - pyasn1==0.4.4
-    - pynacl==1.2.1
-    - pypugjs==5.7.1
-    - rsa==3.4.2
-    - s3transfer==0.1.13
-    - sqlalchemy==1.2.11
-    - toml==0.9.4
-    - torch==0.4.1.post2
-    - torchtext==0.2.3
-    - tqdm==4.25.0
+    - ansible
+    - awscli
+    - flask-sqlalchemy
+    - janome
+    - jsonlines
+    - mojimoji
+    - psycopg2-binary
+    - pypugjs
+    - s3transfer
+    - sqlalchemy
+    - toml
+    - torchtext
+    - tqdm
