--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
             - /opt/conda
             - /opt/reporter/.conda
       - run:
-          name:
-          command: Activate an environment
+          name: Activate an environment
+          command: |
               source /opt/conda/etc/profile.d/conda.sh
               conda activate circleci
       - run:
