--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,13 @@ jobs:
           command: whoami
       - restore_cache:
           keys:
-            - market-reporter-conda-{{ checksum "environment-fixed.yaml" }}
+            - market-reporter-{{ checksum "environment-fixed.yaml" }}
       - run:
           name: Create an environment
           command: |
               conda env create -f environment-fixed.yaml -n circleci --quiet
       - save_cache:
-          key: market-reporter-conda-{{ checksum "environment-fixed.yaml" }}
+          key: market-reporter-{{ checksum "environment-fixed.yaml" }}
           paths:
             - /opt/reporter/.conda
       - run:
@@ -30,7 +30,7 @@ jobs:
               conda activate circleci
       - run:
           name: Check formats
-          command: flake8
+          command: flake8 reporter
       - run:
           name: Run unit tests
           command: python setup.py test
